--- a/Frontends/MultiShop.WebUO/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/Shared/Components/_UILayoutHeadComponentPartial/Default.cshtml
@@ -1,5 +1,4 @@
-﻿﻿
-<head>
+﻿<head>
     <meta charset="utf-8">
     <title>MultiShop - Mikroservis Projesi</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
