--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/Product/Index.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ResultCategoryDto>
+﻿@model List<ResultProductDto>
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/AdminLayout/Index.cshtml";
@@ -9,14 +10,15 @@
     <div class="row">
         <div class="col-md-12">
             <div class="chart-box">
-                <div class="bs-example" data-example-id="bordered-table">
-                    <a href="/Admin/Category/CreateCategory/" class="btn btn-primary">Yeni Kategori Girişi</a>
+                <div class="bs-example">
+                    <a href="/Admin/Product/CreateProduct/" class="btn btn-primary">Yeni Ürün Girişi</a>
                     <br />
                     <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>Kategori Adı</th>
+                                <th>Ürün Adı</th>
+                                <th>Ürün Fiyatı</th>
                                 <th>Sil</th>
                                 <th>Güncelle</th>
                             </tr>
@@ -25,18 +27,17 @@
                             @foreach (var item in Model)
                             {
                                 count++;
-
                                 <tr>
                                     <th scope="row">@count</th>
-                                    <td>@item.CategoryName</td>
-                                    <td><a href="/Admin/Category/DeleteCategory/@item.CategoryId" class="btn btn-danger">Sil</a></td>
-                                    <td><a href="/Admin/Category/UpdateCategory/@item.CategoryId" class="btn btn-success">Güncelle</a></td>
+                                    <td>@item.ProductName</td>
+                                    <td>@item.ProductPrice</td>
+                                    <td><a href="/Admin/Product/DeleteProduct/@item.ProductId" class="btn btn-danger">Sil</a></td>
+                                    <td><a href="/Admin/Product/UpdateProduct/@item.ProductId" class="btn btn-success">Güncelle</a></td>
                                 </tr>
                             }
-
                         </tbody>
                     </table>
-                   
+               
                 </div>
             </div>
         </div>
