--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
+@using MultiShop.DtoLayer.CatalogDtos.ProductDtos
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
