--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
-﻿@using MultiShop.WebUO
-@using MultiShop.WebUO.Models
+﻿@using MultiShop.WebUI
+@using MultiShop.WebUI.Models
+@using MultiShop.DtoLayer.CatalogDtos.FeatureSliderDtos
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
