--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
 @using MultiShop.DtoLayer.CatalogDtos.FeatureSliderDtos
+@using MultiShop.DtoLayer.CatalogDtos.SpecialOfferDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
