--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
 @using MultiShop.DtoLayer.CatalogDtos.FeatureSliderDtos
 @using MultiShop.DtoLayer.CatalogDtos.SpecialOfferDtos
+@using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
