--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
 @using MultiShop.DtoLayer.CatalogDtos.CategoryDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
+@using MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
 
 
 
