--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using MultiShop.DtoLayer.CatalogDtos.SpecialOfferDtos
 @using MultiShop.DtoLayer.CatalogDtos.FeatureDtos
 @using MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
+@using MultiShop.DtoLayer.CatalogDtos.BrandDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
