--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/AdminLayout/Index.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/AdminLayout/Index.cshtml
@@ -33,7 +33,7 @@
         <!-- Main Footer -->
         <footer class="main-footer dark-bg">
             <div class="pull-right hidden-xs"> Version 1.0</div>
-            Copyright &copy; @DateTime.Now.Year MultiShop | Tüm Hakları Saklıdır.
+            Copyright &copy; 2024 MultiShop | Tüm Hakları Saklıdır.
         </footer>
     </div>
     <!-- wrapper -->
