--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductDtos
 @using MultiShop.DtoLayer.CatalogDtos.OfferDiscountDtos
 @using MultiShop.DtoLayer.CatalogDtos.BrandDtos
+@using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 
 
 
