WebUI Ürün Detayı Mikroservis Admin ve Web Site

--- a/Frontends/MultiShop.WebUO/Areas/Admin/Views/Product/ProductListWithCategory.cshtml
+++ b/Frontends/MultiShop.WebUO/Areas/Admin/Views/Product/ProductListWithCategory.cshtml
@@ -21,7 +21,7 @@
                                 <th>Sil</th>
                                 <th>Güncelle</th>
                                 <th>Ürün Görselleri</th>
-                                <th>Açıklama ve Bilgi</th>
+                                @* <th>Açıklama ve Bilgi</th> *@
                             </tr>
                         </thead>
                         <tbody>
@@ -35,6 +35,7 @@
                                     <td>@item.Category.CategoryName</td>
                                     <td><a href="/Admin/Product/DeleteProduct/@item.ProductId" class="btn btn-danger">Sil</a></td>
                                     <td><a href="/Admin/Product/UpdateProduct/@item.ProductId" class="btn btn-success">Güncelle</a></td>
+                                    <td><a href="/Admin/ProductImage/ProductImageDetail/@item.ProductId" class="btn btn-warning">Ürün Görselleri</a></td>
                                 </tr>
                             }
                         </tbody>
