--- a/Frontends/MultiShop.WebUO/Views/ProductList/Index.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/ProductList/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="col-lg-9 col-md-8">
             <div class="row pb-3">
                 @await Component.InvokeAsync("_ProductListGetProductCountComponentPartial")
-                @await Component.InvokeAsync("_ProductListComponentPartial",new {id=ViewBag.id})
+                @await Component.InvokeAsync("_ProductListComponentPartial", new { id = ViewBag.CategoryId })
                 @await Component.InvokeAsync("_ProductListPaginationComponentPartial")
             </div>
         </div>
