--- a/Frontends/MultiShop.WebUO/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/ProductList/ProductDetail.cshtml
@@ -6,9 +6,9 @@
 <div class="container-fluid pb-5">
     <div class="row px-xl-5">
 
-        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId })
 
-        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial")
+        @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial", new { id = ViewBag.ProductId })
 
     </div>
     <div class="row px-xl-5">
