--- a/Frontends/MultiShop.WebUO/Views/Shared/Components/_ProductListComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/Shared/Components/_ProductListComponentPartial/Default.cshtml
@@ -1,6 +1,4 @@
 ﻿@model List<ResultProductsWithCategoryDto>
-
-
 @foreach (var item in Model)
 {
     <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
@@ -15,7 +13,7 @@
                 </div>
             </div>
             <div class="text-center py-4">
-                <a class="h6 text-decoration-none text-truncate" href="">@item.ProductName</a>
+                <a class="h6 text-decoration-none text-truncate" href="/ProductList/ProductDetail/@item.ProductId">@item.ProductName</a>
                 <div class="d-flex align-items-center justify-content-center mt-2">
                     <h5>@item.ProductPrice</h5><h6 class="text-muted ml-2"><del>000 ₺</del></h6>
                 </div>
