WebUI ÜrünDetay Açıklama ve Bilgi Bölümü MicroServis,admin web site

--- a/Frontends/MultiShop.WebUO/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/ProductList/ProductDetail.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid pb-5">
     <div class="row px-xl-5">
 
-        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId })
+        @*  @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId }) *@
 
         @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial", new { id = ViewBag.ProductId })
 
@@ -21,9 +21,9 @@
                 </div>
                 <div class="tab-content">
 
-                    @await Component.InvokeAsync("_ProductDetailDescriptionComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailDescriptionComponentPartial", new { id = ViewBag.ProductId })
 
-                    @await Component.InvokeAsync("_ProductDetailInformationComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new { id = ViewBag.ProductId })
 
                     @await Component.InvokeAsync("_ProductDetailReviewComponentPartial")
 
