--- a/Frontends/MultiShop.WebUO/Views/Shared/Components/_ProductDetailInformationComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/Shared/Components/_ProductDetailInformationComponentPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿﻿<div class="tab-pane fade" id="tab-pane-2">
+﻿@model GetByIdProductDetailDto
+﻿<div class="tab-pane fade" id="tab-pane-2">
     <h4 class="mb-3">Ürün Bilgileri</h4>
-    <p>ProductInfo</p>    
+    <p>@Model.ProductInfo</p>    
 </div>
