--- a/Frontends/MultiShop.WebUO/Views/ProductList/ProductDetail.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/ProductList/ProductDetail.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid pb-5">
     <div class="row px-xl-5">
 
-        @*  @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId }) *@
+        @await Component.InvokeAsync("_ProductDetailImageSliderComponentPartial", new { id = ViewBag.ProductId })
 
         @await Component.InvokeAsync("_ProductDetailFeatureComponentPartial", new { id = ViewBag.ProductId })
 
@@ -25,7 +25,7 @@
 
                     @await Component.InvokeAsync("_ProductDetailInformationComponentPartial", new { id = ViewBag.ProductId })
 
-                    @await Component.InvokeAsync("_ProductDetailReviewComponentPartial")
+                    @await Component.InvokeAsync("_ProductDetailReviewComponentPartial", new { id = ViewBag.ProductId })
 
                 </div>
             </div>
