--- a/Frontends/MultiShop.WebUO/Views/Contact/Index.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/Contact/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@model CreateContactDto
+
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/_UILayout.cshtml";
 }
 
+<!-- Breadcrumb Start -->
 <div class="container-fluid">
     <div class="row px-xl-5">
         <div class="col-12">
@@ -13,7 +16,8 @@
         </div>
     </div>
 </div>
-
+<!-- Breadcrumb End -->
+<!-- Contact Start -->
 <div class="container-fluid">
     <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Bize Yazın</span></h2>
     <div class="row px-xl-5">
@@ -23,21 +27,21 @@
                 <form method="post">
                     <div class="control-group">
                         <input type="text" class="form-control" id="name" placeholder="Adınız soyadınız"
-                               required="required" data-validation-required-message="Lütfen boş geçmeyin" />
+                               required="required" data-validation-required-message="Lütfen boş geçmeyin" asp-for="NameSurname" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
                         <input type="email" class="form-control" id="email" placeholder="Email Adresiniz"
-                               required="required" data-validation-required-message="Lütfen boş geçmeyin"  />
+                               required="required" data-validation-required-message="Lütfen boş geçmeyin" asp-for="Email" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
-                        <input type="text" class="form-control" id="subject" placeholder="Mesaj Konusu"
+                        <input type="text" class="form-control" id="subject" placeholder="Mesaj Konusu" asp-for="Subject"
                                required="required" data-validation-required-message="Lütfen boş geçmeyin" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
-                        <textarea class="form-control" rows="8" id="message" placeholder="Mesajınız"
+                        <textarea class="form-control" rows="8" id="message" placeholder="Mesajınız" asp-for="Message"
                                   required="required"
                                   data-validation-required-message="Lütfen boş geçmeyin"></textarea>
                         <p class="help-block text-danger"></p>
@@ -51,5 +55,7 @@
             </div>
         </div>
         @await Component.InvokeAsync("_ContactDetailComponentPartial")
+
     </div>
 </div>
+<!-- Contact End -->
