--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -11,6 +11,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 @using MultiShop.DtoLayer.CommentDtos
+@using MultiShop.DtoLayer.CatalogDtos.ContactDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
