--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -10,8 +10,11 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductImageDtos
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
-@using MultiShop.DtoLayer.CommentDtos
 @using MultiShop.DtoLayer.CatalogDtos.ContactDtos
+@using MultiShop.DtoLayer.IdentityDtos.RegisterDtos
+
+@using MultiShop.DtoLayer.CommentDtos
+
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
