--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -12,6 +12,7 @@
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 @using MultiShop.DtoLayer.CatalogDtos.ContactDtos
 @using MultiShop.DtoLayer.IdentityDtos.RegisterDtos
+@using MultiShop.DtoLayer.IdentityDtos.LoginDtos
 
 @using MultiShop.DtoLayer.CommentDtos
 
