sepet ekranı ve sepette indirim işlemi

--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -11,11 +11,15 @@
 @using MultiShop.DtoLayer.CatalogDtos.ProductDetailDtos
 @using MultiShop.DtoLayer.CatalogDtos.AboutDtos
 @using MultiShop.DtoLayer.CatalogDtos.ContactDtos
+
 @using MultiShop.DtoLayer.IdentityDtos.RegisterDtos
 @using MultiShop.DtoLayer.IdentityDtos.LoginDtos
 
 @using MultiShop.DtoLayer.CommentDtos
 
+@using MultiShop.DtoLayer.BasketDtos
+
+@using MultiShop.DtoLayer.DiscountDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
