--- a/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUO/Views/_ViewImports.cshtml
@@ -21,5 +21,7 @@
 
 @using MultiShop.DtoLayer.DiscountDtos
 
+@using MultiShop.DtoLayer.OrderDtos.OrderAddressDtos
+@using MultiShop.DtoLayer.OrderDtos.OrderOrderingDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
